# stm32-uart

./: Cargo.toml  build.sh  flash.sh
.cargo/: config
src/: main.rs
