[package]
name = "stm32f429"
version = "0.1.0"
authors = ["Sergey Velykokhatko <sergey@velykokhatko.de>"]
edition = "2018"


# [profile.dev]
# panic = "abort"
# 
# [profile.release]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.7"
features = ["rt", "stm32f429"] # replace the model of your microcontroller here
