[package]
name = "stm32f429"
version = "0.1.0"
authors = ["Sergey Velykokhatko <sergey@velykokhatko.de>"]
edition = "2018"


# [profile.dev]
# panic = "abort"
# 
# [profile.release]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["rt", "stm32f429"] # replace the model of your microcontroller here
